--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-
-
-
     defaultConfig {
         applicationId "com.wd.launcher3"
         minSdkVersion 23
@@ -15,10 +12,24 @@ android {
 
     }
 
+    signingConfigs {
+        wdsys {
+            keyAlias 'mywd'
+            keyPassword '123456'
+            storeFile file('D:/software/Android/Android Studio/mywd-123456.jks')
+            storePassword '123456'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            signingConfig signingConfigs.wdsys
+        }
+        debug {
+            signingConfig signingConfigs.wdsys
         }
     }
 
